--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="about.html" class="colored">About</a>
             <a href="gallery.html" class="colored">Gallery</a>
             <a href="#blog" class="colored">Blogs</a>
-            <a href="#order">Order</a>
+            <a href="#order" class="colored">Order</a>
         </nav>
         <div class="icons">
             <div id="menu-btn" class="fas fa-bars" title="menu"></div>
